--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body class="bg-gray-100">
 
-        <div class="container m-4 p-4">
+        <div class="container m-2 p-1 mb-8">
             <h1 class="text-left text-4xl align-middle underline font-semibold font-sans mb-8">
                 Welcome to the Slash Command Google Chat Bot!
             </h1>
@@ -24,7 +24,7 @@
             </p>
         </div>
 
-        <div class="flex flex-col m-5">
+        <div class="flex flex-col mr-2 ml-2 mb-3">
             <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
                     <div class="shadow overflow-hidden border-b border-gray-300 sm:rounded-lg">
@@ -50,7 +50,7 @@
                                     <script id="rowsTemplate" type="text/x-handlebars-template">
                                         {{#each datalist}}
                                         <tr>
-                                            <td class="px-6 py-4 whitespace-nowrap">
+                                            <td class="px-3 py-4 whitespace-nowrap">
                                                 <div class="flex items-center">
                                                     <div class="flex-shrink-0 h-10 w-10">
                                                         <img    class="h-10 w-10 rounded-full"
@@ -92,7 +92,7 @@
                                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-gray-300 text-gray-900">Future Update</span>
                                                 {{/if}}
                                             </td>
-                                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                                            <td class="px-1 py-2 whitespace-nowrap text-sm text-gray-500">
                                                 {{this.lastUpdated}}
                                             </td>
                                         </tr>
@@ -109,29 +109,29 @@
         </div>
     </body>
 
-    <footer class="min-w-full text-xs absolute bottom-0">
+    <footer class="min-w-full text-xs">
         <hr>
             <div class="flex">
                 <!-- Created by -->
                 <div class="flex-1 w-1/4">
-                    <p class="ml-4 p-4">
+                    <p class="ml-4 p-2">
                         Created by -- E.Cope  👾
                     </p>
                 </div>
 
                 <!-- Icon attributes -->
                 <div class="flex-1 w-1/2">
-                    <p class="align-center p-4 ">
+                    <p class="align-center p-2">
                         Icons made by 
-                        <a class="text-purple-500" href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> and 
-                        <a class="text-purple-500" href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from 
-                        <a class="text-purple-500" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>.
+                        <a class="text-purple-500" href="https://www.flaticon.com/authors/vectors-market"  target="_blank" title="Vectors Market">Vectors Market</a> and
+                        <a class="text-purple-500" href="https://www.flaticon.com/authors/freepik"  target="_blank" title="Freepik">Freepik</a> from
+                        <a class="text-purple-500" href="https://www.flaticon.com/"  target="_blank" title="Flaticon">www.flaticon.com</a>.
                     </p>
                 </div>
 
                 <!-- Last updated -->
                 <div class="flex-1 w-1/4">
-                    <p class="mr-4 p-4 text-right font-normal">
+                    <p class="mr-4 p-2 text-right font-normal">
                         📅 Last updated -- March 2021
                     </p>
                 </div>
